build: footer copy right updation

--- a/projects/connected-dots/src/app/app/app.component.html
+++ b/projects/connected-dots/src/app/app/app.component.html
@@ -114,7 +114,7 @@
         </div>
         <div class="row">
           <div class="col-12 signature">
-            &#169; <span class="year">{{year}}</span> - Tomas Trajan
+            &#169; <span class="year">{{year}}</span> - CDAC-HCDC-IoT
             <br class="d-block d-sm-none">
             <a [matTooltip]="'iotfw.footer.changelog' | translate"
                matTooltipPosition="before"
